fix: backend validations
